--- a/src/Components/Soon.css
+++ b/src/Components/Soon.css
@@ -5,7 +5,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 95vh;
+    height: 100vh;
     padding: 0 20px;
   }
   
@@ -150,7 +150,11 @@
   }
   
   @media (max-width: 768px) {
+    .coming-soon-section {
   
+      height: 95vh;
+    }
+    
     /* Coming Soon Content */
     .coming-soon-content {
       margin: 50px 20px;
